--- a/course5/mod1-solution/index.html
+++ b/course5/mod1-solution/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html  ng-app="LunchCheck" lang="en">
   <head>
     <title>Lunch Checker</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,21 +9,24 @@
     </style>
   </head>
 <body>
-   <div class="container">
+   <div ng-controller="LunchCheckController" class="container">
      <h1>Lunch Checker</h1>
 
          <div class="form-group">
              <input id="lunch-menu" type="text"
-             placeholder="list comma separated dishes you usually have for lunch"
-             class="form-control">
+             placeholder="list comma separated dishes you usually have for lunch (does NOT consider and empty item, i.e., , , as an item towards to the count)"
+             class="form-control"
+             ng-model="dishes">
          </div>
          <div class="form-group">
-             <button class="btn btn-default">Check If Too Much</button>
+             <button ng-click="checkDishes()" class="btn btn-default">Check If Too Much</button>
          </div>
          <div class="form-group message">
            <!-- Your message can go here. -->
+           {{message}}
          </div>
    </div>
-
+   <script src="js/angular.min.js"></script>
+   <script src="js/app.js"></script>
 </body>
 </html>
