--- a/course5/mod2-solution/index.html
+++ b/course5/mod2-solution/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html ng-app="ShoppingListCheckOff" lang="en">
   <head>
     <title>Shopping List Check Off</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -27,27 +27,34 @@
   <h1>Shopping List Check Off</h1>
 
   <div class="row">
-
+   <div ng-controller="ToBuyController as toBuy">
     <!-- To Buy List -->
     <div class="col-md-6">
      <h2>To Buy:</h2>
      <ul>
-       <li>Buy 10 cookies <button class="btn btn-default"><span class="glyphicon glyphicon-ok"></span> Bought</button></li>
-       <li>Buy 10 cookies <button class="btn btn-default"><span class="glyphicon glyphicon-ok"></span> Bought</button></li>
+       <li ng-repeat="item in toBuy.items">
+         Buy {{ item.quantity }} {{ item.name }}
+         <button ng-click="toBuy.buyItem($index);" class="btn btn-default"><span class="glyphicon glyphicon-ok"></span> Bought</button>
+       </li>
      </ul>
-     <div class="emptyMessage">Everything is bought!</div>
+     <div ng-if="(toBuy.items.length == 0)" class="emptyMessage">Everything is bought!</div>
     </div>
-
+   </div>
+   <div ng-controller="AlreadyBoughtController as alreadyBought">
     <!-- Already Bought List -->
     <div class="col-md-6">
      <h2>Already Bought:</h2>
      <ul>
-       <li>Bought 10 cookies</li>
+       <li ng-repeat="item in alreadyBought.items">
+         Bought {{ item.quantity }} {{ item.name }}
+       </li>
      </ul>
-     <div class="emptyMessage">Nothing bought yet.</div>
+     <div ng-if="(alreadyBought.items.length == 0)" class="emptyMessage">Nothing bought yet.</div>
     </div>
+   </div>
   </div>
 </div>
-
+<script src="js/angular.min.js"></script>
+<script src="js/app.js"></script>
 </body>
 </html>
