--- a/course5/mod3-solution/foundItems.html
+++ b/course5/mod3-solution/foundItems.html
@@ -1,7 +1,31 @@
-<ul>
-  <li ng-repeat="item in list.items">
-    {{ item.name }}, {{ item.short_name }}, {{ item.description }}
-    <button ng-click="list.onRemove({index: $index});">Don't want this one!</button>
-  </li>
-</ul>
-<div class="error" ng-if="(list.length==0)">Nothing found.</div>
+<div class="container">
+  <div ng-if="(list.found.length>0)" class="row bordered-bottom">
+    <div class="col-sm-1 col-md-1">
+      Short name:
+    </div>
+    <div class="col-sm-3 col-md-3 bordered-left">
+      Name:
+    </div>
+    <div class="col-sm-6 col-md-6 bordered-left">
+      Description:
+    </div>
+    <div class="col-sm-2 col-md-2 bordered-left">
+      Button:
+    </div>
+  </div>
+  <div ng-repeat="item in list.found" class="row bordered-bottom">
+    <div class="col-sm-1 col-md-1 bordered-left">
+      {{ item.short_name }}
+    </div>
+    <div class="col-sm-3 col-md-3 bordered-left">
+      {{ item.name }}
+    </div>
+    <div class="col-sm-6 col-md-6 bordered-left">
+      {{ item.description }}
+    </div>
+    <div class="col-sm-2 col-md-2 bordered-left">
+      <button ng-click="list.onRemove({index: $index});">Don't want this one!</button>
+    </div>
+  </div>
+</div>
+<div class="error" ng-if="(list.found.length==0)">Nothing found.</div>
