--- a/course5/mod3-solution/index.html
+++ b/course5/mod3-solution/index.html
@@ -10,16 +10,23 @@
   <div class="container">
     <h1>Narrow Down Your Chinese Menu Choice</h1>
     <div ng-controller="NarrowItDownController as list">
-      <div class="form-group">
-        <input type="text" ng-model="list.searchTerm" placeholder="search term" class="form-control">
+      <div class="row">
+        <div class="col-xs-12 col-md-10">
+          <div class="form-group">
+            <input type="text" ng-model="list.searchTerm" placeholder="search term" class="form-control">
+          </div>
+        </div>
+        <div class="col-xs-12 col-md-2">
+          <div class="form-group narrow-button">
+            <button ng-click="list.searchItems(list.searchTerm)" class="btn btn-primary">Narrow It Down For Me!</button>
+          </div>
+        </div>
       </div>
-      <div class="form-group narrow-button">
-        <button ng-click="list.searchItems(list.searchTerm)" class="btn btn-primary">Narrow It Down For Me!</button>
-      </div>
-
       <!-- found-items should be implemented as a component -->
-      <found-items found-items="fxoundItems" on-remove="list.removeItem(index)">
+      <found-items found="list.found" on-remove="list.removeItem(index)">
       </found-items>
+      <!-- <found-items found-items="foundItems" on-remove="list.removeItem(index)">
+      </found-items> -->
     </div>
   </div>
   <script src="js/angular.min.js"></script>
