--- a/course5/mod5-solution/src/public/my-info/my-info.html
+++ b/course5/mod5-solution/src/public/my-info/my-info.html
@@ -11,6 +11,22 @@
       <li>Phone number: {{ myInfoCtrl.userInfo.phoneNumber }}</li>
       <li>Favourite menu item: {{ myInfoCtrl.userInfo.menuNumber }}</li>
     </ul>
+    <div class="menu-item-tile col-md-6">
+      <div class="row">
+        <div class="col-sm-5">
+          <div class="menu-item-photo">
+            <div>{{myInfoCtrl.userInfo.menuItemInfo.short_name}}</div>
+            <img class="img-responsive" width="250" height="150" ng-src="{{myInfoCtrl.basePath}}/images/{{myInfoCtrl.userInfo.menuItemInfo.short_name}}.jpg" alt="{{myInfoCtrl.userInfo.menuItemInfo.name}}">
+          </div>
+          <div class="menu-item-price">{{myInfoCtrl.userInfo.menuItemInfo.price_small | currency}}<span> {{myInfoCtrl.userInfo.menuItemInfo.small_portion_name}}</span> {{myInfoCtrl.userInfo.menuItemInfo.price_large | currency}} <span>{{myInfoCtrl.userInfo.menuItemInfo.large_portion_name}}</span></div>
+        </div>
+        <div class="menu-item-description col-sm-7">
+          <h3 class="menu-item-title">{{myInfoCtrl.userInfo.menuItemInfo.name}}</h3>
+          <p class="menu-item-details">{{myInfoCtrl.userInfo.menuItemInfo.description}}</p>
+        </div>
+      </div>
+      <hr class="visible-xs">
+    </div>
   </div>
   <div class="red" ng-if="(myInfoCtrl.userInfo === undefined)">
     <div class="text-center">
